# bindinator

./: .gitignore  AUTHORS  Makefile.am  README  README.md  configure.ac
Gio-2.0/: Makefile.am  configure.ac  gio-2.0.dll.config  gio-sharp-api.raw  gio-sharp.metadata  gio-sharp.snk
Soup-2.4/: Makefile.am  configure.ac  m4.custom  soup-sharp-api.raw  soup-sharp.metadata  soup-sharp.snk
Soup-2.4/m4/: giosharp.m4
WebKit-1.0/: README  configure.ac  m4.custom  webkit-sharp-api.raw  webkit-sharp.metadata
WebKit-1.0/m4/: soupsharp.m4
WebKit-3.0/: Makefile.am  README  configure.ac  webkit-sharp-api.raw  webkit-sharp.metadata
WebKit-3.0/m4/: cairo.m4
bindinate/: Bindings.csproj.template  Bindings.sln.BuildConfigs.template  Bindings.sln.ProjDefs.template  Bindings.sln.template  Makefile-docs.am.template  Makefile-glue.am.template  Makefile.am  Makefile.am.template  autogen.sh  bindinate.in  configure.ac.template  csproj.xslt  custom.sources  dependency.m4.template  gir2gapi.xslt.in  merge.xslt  preprocess.xslt
