bin_SCRIPTS = bindinate
bindinatedir = $(libdir)/bindinator
bindinate_DATA = gir2gapi.xslt preprocess.xslt merge.xslt configure.ac.template Makefile.am.template AssemblyInfo.cs.in autogen.sh pc.template Makefile-docs.am.template Makefile-glue.am.template Bindings.sln.template Bindings.csproj.template dependency.m4.template
